--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+:root {
+  --primary: #128187;
+  --secondary: #b4497f;
+}
 
 .container {
   display: flex;
@@ -9,11 +13,91 @@
   max-width: 1440px;
 }
 
-
-
 /* Extra style */
-/* body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-  sans-serif;
-} */
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+}
+
+h1 {
+  font-size: 2.5rem;
+}
+
+button {
+  border-radius: 40px;
+  cursor: pointer;
+  color: black;
+  background-color: white;
+  border: none;
+  box-shadow: 1px 2px 5px rgba(0, 0, 0, 30%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 40px;
+  padding: 5px 2rem;
+  min-width: 6rem;
+  font-size: 1.2rem;
+}
+
+button:hover {
+  border-radius: 40px;
+  background-color: var(--primary);
+  color: white;
+}
+
+select {
+  min-height: 30px;
+  padding: 0 12px;
+  border-color: transparent;
+  background-color: var(--primary);
+  color: white;
+  border-radius: 5px;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+option {
+  background-color: white;
+  color: black;
+  cursor: pointer;
+}
+
+input {
+  min-height: 30px;
+  border: 1px solid grey;
+  padding: 0 12px;
+  border-radius: 5px;
+  font-size: 1rem;
+}
+
+a:link {
+  border-radius: 40px;
+  color: black;
+  box-shadow: 1px 2px 5px rgba(0, 0, 0, 30%);
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 40px;
+  padding: 5px 2rem;
+  min-width: 6rem;
+  font-size: 1.2rem;
+}
+
+a:visited {
+  color: black;
+  text-decoration: none;
+}
+a:active {
+  background-color: white;
+  color: black;
+  text-decoration: none;
+}
+
+a:hover {
+  background-color: var(--primary);
+  color: white;
+  text-decoration: none;
+}
+
